--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!-- App Styles -->
     <link rel="stylesheet" type="text/css" href="dist/styles.css">
 
-    <title>Minutas</title>
+    <title>Example</title>
 </head>
 
 <body>
-    <h1> Minutas de Reunión
+    <h1> Example
         <h1>
             <div ng-app="exampleApp"></div>
 </body>
